@@ -1,5 +1,7 @@
 Changes to Version 2.0-17
 
+    o Fix to residualPlots with a 0/1 variable not declared a factor
+    
     o Small fixes to code and docs.
 
 Changes to Version 2.0-16
